# ChemParse

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  chemparse.html  contributing.html  genindex.html  html.html  index.html  installation.html  objects.inv  orcaparse.html  py-modindex.html  pyproject.toml  scripts.html  search.html  searchindex.js  usage.html
.doctrees/: chemparse.doctree  contributing.doctree  environment.pickle  html.doctree  index.doctree  installation.doctree  orcaparse.doctree  scripts.doctree  usage.doctree
_sources/: chemparse.rst.txt  index.rst.txt  orcaparse.rst.txt  scripts.rst.txt
chemparse/: default.css  default.js  elements.py  file.py  gpaw_elements.py  gpaw_regex.json  logging_config.py  orca_elements.py  orca_regex.json  regex_request.py  regex_settings.py  scripts.py  vasp_elements.py  vasp_regex.json
docs/: chemparse.rst  conf.py  contributing.rst  html.rst  index.rst  installation.rst  modules.rst  orcaparse.rst  scripts.rst  usage.rst
examples/: add_block_example.ipynb  add_block_example.md  basic_example.ipynb  basic_example.md  big_file_example.ipynb  big_file_example.md  example.html  example.out  example_data.html  example_gpaw.html  example_gpaw.txt  gpaw_example.ipynb  gpaw_example.md  scripts_example.ipynb  scripts_example.md
orcaparse/: __init__.py  data.py  default.css  default.js  elements.py  file.py  gpaw_elements.py  gpaw_regex.json  header_phrases.txt  logging_config.py  orca_elements.py  orca_file.py  orca_regex.json  orca_regex_settings.py  parse.py  regex.json  regex_request.py  regex_settings.py  scripts.py  units_and_constants.py
(+58 files in other folders)
