[tool.poetry]
name = "orcaparse"
version = "0.3.0"
description = ""
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
pint = "^0.23"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
lxml = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
orca_to_html = "orcaparse.scripts:orca_to_html_cli"
orca_parse = "orcaparse.scripts:orca_parse_cli"
