[tool.poetry]
name = "chemparse"
version = "0.3.0"
description = ""
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
pint = "^0.23"
openpyxl = "^3.1.2"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
lxml = "^5.1.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chem_to_html = "chemparse.scripts:chem_to_html_cli"
chem_parse = "chemparse.scripts:chem_parse_cli"
